// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tile s huge 1`] = `
<View
  style={
    Object {
      "padding": 15,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginBottom": 10,
      }
    }
  >
    <Text
      allowFontScaling={false}
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
      style={
        Object {
          "color": "#1D1D1B",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 20,
          "lineHeight": 20,
          "marginBottom": 0,
        }
      }
    >
      Nature notes
    </Text>
  </View>
  <Text
    allowFontScaling={false}
    maxFontSizeMultiplier={2}
    minimumFontScale={0.7}
    style={
      Object {
        "color": "#696969",
        "fontFamily": "TimesDigitalW04-Regular",
        "fontSize": 14,
        "lineHeight": 20,
      }
    }
  >
    <Text
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
    >
      <Text
        maxFontSizeMultiplier={2}
        minimumFontScale={0.7}
        style={
          Object {
            "color": "#1D1D1B",
            "fontWeight": "bold",
          }
        }
      >
        Rick Astley
      </Text>
      , singer-songwriter, 
      <Text
        maxFontSizeMultiplier={2}
        minimumFontScale={0.7}
        style={
          Object {
            "fontStyle": "italic",
          }
        }
      >
        Never Gonna Give You Up 
      </Text>
      (1987), 53; 
      <Text
        maxFontSizeMultiplier={2}
        minimumFontScale={0.7}
        style={
          Object {
            "color": "#1D1D1B",
            "fontWeight": "bold",
          }
        }
      >
        Mike Batt
      </Text>
      , composer, songwriter, 
      <Text
        maxFontSizeMultiplier={2}
        minimumFontScale={0.7}
        style={
          Object {
            "fontStyle": "italic",
          }
        }
      >
        Wombling Free 
      </Text>
      (1978), 
      <Text
        maxFontSizeMultiplier={2}
        minimumFontScale={0.7}
        style={
          Object {
            "fontStyle": "italic",
          }
        }
      >
        Bright Eyes 
      </Text>
    </Text>
  </Text>
  <Text
    allowFontScaling={false}
    maxFontSizeMultiplier={2}
    minimumFontScale={0.7}
    style={
      Object {
        "color": "#696969",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 12,
        "marginTop": 10,
      }
    }
  >
    <Text
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
    >
      Libby Purves
    </Text>
  </Text>
</View>
`;

exports[`tile s medium 1`] = `
<View
  style={
    Object {
      "padding": 15,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginBottom": 5,
      }
    }
  >
    <Text
      allowFontScaling={false}
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
      style={
        Object {
          "color": "#1D1D1B",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 20,
          "lineHeight": 20,
          "marginBottom": 5,
        }
      }
    >
      Nature notes
    </Text>
  </View>
  <Text
    allowFontScaling={false}
    maxFontSizeMultiplier={2}
    minimumFontScale={0.7}
    style={
      Object {
        "color": "#696969",
        "fontFamily": "TimesDigitalW04-Regular",
        "fontSize": 14,
        "lineHeight": 20,
      }
    }
  >
    <Text
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
    >
      <Text
        maxFontSizeMultiplier={2}
        minimumFontScale={0.7}
        style={
          Object {
            "color": "#1D1D1B",
            "fontWeight": "bold",
          }
        }
      >
        Rick Astley
      </Text>
      , singer-songwriter, 
      <Text
        maxFontSizeMultiplier={2}
        minimumFontScale={0.7}
        style={
          Object {
            "fontStyle": "italic",
          }
        }
      >
        Never Gonna Give You Up 
      </Text>
      (1987), 53; 
      <Text
        maxFontSizeMultiplier={2}
        minimumFontScale={0.7}
        style={
          Object {
            "color": "#1D1D1B",
            "fontWeight": "bold",
          }
        }
      >
        Mike Batt
      </Text>
      , composer, songwriter, 
      <Text
        maxFontSizeMultiplier={2}
        minimumFontScale={0.7}
        style={
          Object {
            "fontStyle": "italic",
          }
        }
      >
        Wombling Free 
      </Text>
      (1978), 
      <Text
        maxFontSizeMultiplier={2}
        minimumFontScale={0.7}
        style={
          Object {
            "fontStyle": "italic",
          }
        }
      >
        Bright Eyes 
      </Text>
    </Text>
  </Text>
  <Text
    allowFontScaling={false}
    maxFontSizeMultiplier={2}
    minimumFontScale={0.7}
    style={
      Object {
        "color": "#696969",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 12,
        "marginTop": 10,
      }
    }
  >
    <Text
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
    >
      Libby Purves
    </Text>
  </Text>
</View>
`;

exports[`tile s no byline 1`] = `
<View
  style={
    Object {
      "paddingBottom": 10,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
      }
    }
  >
    <Text
      allowFontScaling={false}
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
      style={
        Object {
          "color": "#1D1D1B",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 22,
          "marginBottom": 5,
        }
      }
    >
      Nature notes
    </Text>
  </View>
  <Text
    allowFontScaling={false}
    maxFontSizeMultiplier={2}
    minimumFontScale={0.7}
    style={
      Object {
        "color": "#696969",
        "fontFamily": "TimesDigitalW04-Regular",
        "fontSize": 14,
        "lineHeight": 20,
      }
    }
  >
    <Text
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
    >
      <Text
        maxFontSizeMultiplier={2}
        minimumFontScale={0.7}
        style={
          Object {
            "color": "#1D1D1B",
            "fontWeight": "bold",
          }
        }
      >
        Rick Astley
      </Text>
      , singer-songwriter, 
      <Text
        maxFontSizeMultiplier={2}
        minimumFontScale={0.7}
        style={
          Object {
            "fontStyle": "italic",
          }
        }
      >
        Never Gonna Give You Up 
      </Text>
      (1987), 53; 
      <Text
        maxFontSizeMultiplier={2}
        minimumFontScale={0.7}
        style={
          Object {
            "color": "#1D1D1B",
            "fontWeight": "bold",
          }
        }
      >
        Mike Batt
      </Text>
      , composer, songwriter, 
      <Text
        maxFontSizeMultiplier={2}
        minimumFontScale={0.7}
        style={
          Object {
            "fontStyle": "italic",
          }
        }
      >
        Wombling Free 
      </Text>
      (1978), 
      <Text
        maxFontSizeMultiplier={2}
        minimumFontScale={0.7}
        style={
          Object {
            "fontStyle": "italic",
          }
        }
      >
        Bright Eyes 
      </Text>
    </Text>
  </Text>
</View>
`;

exports[`tile s small 1`] = `
<View
  style={
    Object {
      "paddingBottom": 10,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
      }
    }
  >
    <Text
      allowFontScaling={false}
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
      style={
        Object {
          "color": "#1D1D1B",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 22,
          "marginBottom": 5,
        }
      }
    >
      Nature notes
    </Text>
  </View>
  <Text
    allowFontScaling={false}
    maxFontSizeMultiplier={2}
    minimumFontScale={0.7}
    style={
      Object {
        "color": "#696969",
        "fontFamily": "TimesDigitalW04-Regular",
        "fontSize": 14,
        "lineHeight": 20,
      }
    }
  >
    <Text
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
    >
      <Text
        maxFontSizeMultiplier={2}
        minimumFontScale={0.7}
        style={
          Object {
            "color": "#1D1D1B",
            "fontWeight": "bold",
          }
        }
      >
        Rick Astley
      </Text>
      , singer-songwriter, 
      <Text
        maxFontSizeMultiplier={2}
        minimumFontScale={0.7}
        style={
          Object {
            "fontStyle": "italic",
          }
        }
      >
        Never Gonna Give You Up 
      </Text>
      (1987), 53; 
      <Text
        maxFontSizeMultiplier={2}
        minimumFontScale={0.7}
        style={
          Object {
            "color": "#1D1D1B",
            "fontWeight": "bold",
          }
        }
      >
        Mike Batt
      </Text>
      , composer, songwriter, 
      <Text
        maxFontSizeMultiplier={2}
        minimumFontScale={0.7}
        style={
          Object {
            "fontStyle": "italic",
          }
        }
      >
        Wombling Free 
      </Text>
      (1978), 
      <Text
        maxFontSizeMultiplier={2}
        minimumFontScale={0.7}
        style={
          Object {
            "fontStyle": "italic",
          }
        }
      >
        Bright Eyes 
      </Text>
    </Text>
  </Text>
  <Text
    allowFontScaling={false}
    maxFontSizeMultiplier={2}
    minimumFontScale={0.7}
    style={
      Object {
        "color": "#696969",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 12,
        "marginTop": 10,
      }
    }
  >
    <Text
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
    >
      Libby Purves
    </Text>
  </Text>
</View>
`;

exports[`tile s smallTablet 1`] = `
<View
  style={
    Object {
      "padding": 15,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginBottom": 5,
      }
    }
  >
    <Text
      allowFontScaling={false}
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
      style={
        Object {
          "color": "#1D1D1B",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 20,
          "lineHeight": 20,
          "marginBottom": 5,
        }
      }
    >
      Nature notes
    </Text>
  </View>
  <Text
    allowFontScaling={false}
    maxFontSizeMultiplier={2}
    minimumFontScale={0.7}
    style={
      Object {
        "color": "#696969",
        "fontFamily": "TimesDigitalW04-Regular",
        "fontSize": 14,
        "lineHeight": 20,
      }
    }
  >
    <Text
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
    >
      <Text
        maxFontSizeMultiplier={2}
        minimumFontScale={0.7}
        style={
          Object {
            "color": "#1D1D1B",
            "fontWeight": "bold",
          }
        }
      >
        Rick Astley
      </Text>
      , singer-songwriter, 
      <Text
        maxFontSizeMultiplier={2}
        minimumFontScale={0.7}
        style={
          Object {
            "fontStyle": "italic",
          }
        }
      >
        Never Gonna Give You Up 
      </Text>
      (1987), 53; 
      <Text
        maxFontSizeMultiplier={2}
        minimumFontScale={0.7}
        style={
          Object {
            "color": "#1D1D1B",
            "fontWeight": "bold",
          }
        }
      >
        Mike Batt
      </Text>
      , composer, songwriter, 
      <Text
        maxFontSizeMultiplier={2}
        minimumFontScale={0.7}
        style={
          Object {
            "fontStyle": "italic",
          }
        }
      >
        Wombling Free 
      </Text>
      (1978), 
      <Text
        maxFontSizeMultiplier={2}
        minimumFontScale={0.7}
        style={
          Object {
            "fontStyle": "italic",
          }
        }
      >
        Bright Eyes 
      </Text>
    </Text>
  </Text>
  <Text
    allowFontScaling={false}
    maxFontSizeMultiplier={2}
    minimumFontScale={0.7}
    style={
      Object {
        "color": "#696969",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 12,
        "marginTop": 10,
      }
    }
  >
    <Text
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
    >
      Libby Purves
    </Text>
  </Text>
</View>
`;

exports[`tile s wide 1`] = `
<View
  style={
    Object {
      "padding": 15,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginBottom": 10,
      }
    }
  >
    <Text
      allowFontScaling={false}
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
      style={
        Object {
          "color": "#1D1D1B",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 20,
          "lineHeight": 20,
          "marginBottom": 0,
        }
      }
    >
      Nature notes
    </Text>
  </View>
  <Text
    allowFontScaling={false}
    maxFontSizeMultiplier={2}
    minimumFontScale={0.7}
    style={
      Object {
        "color": "#696969",
        "fontFamily": "TimesDigitalW04-Regular",
        "fontSize": 14,
        "lineHeight": 20,
      }
    }
  >
    <Text
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
    >
      <Text
        maxFontSizeMultiplier={2}
        minimumFontScale={0.7}
        style={
          Object {
            "color": "#1D1D1B",
            "fontWeight": "bold",
          }
        }
      >
        Rick Astley
      </Text>
      , singer-songwriter, 
      <Text
        maxFontSizeMultiplier={2}
        minimumFontScale={0.7}
        style={
          Object {
            "fontStyle": "italic",
          }
        }
      >
        Never Gonna Give You Up 
      </Text>
      (1987), 53; 
      <Text
        maxFontSizeMultiplier={2}
        minimumFontScale={0.7}
        style={
          Object {
            "color": "#1D1D1B",
            "fontWeight": "bold",
          }
        }
      >
        Mike Batt
      </Text>
      , composer, songwriter, 
      <Text
        maxFontSizeMultiplier={2}
        minimumFontScale={0.7}
        style={
          Object {
            "fontStyle": "italic",
          }
        }
      >
        Wombling Free 
      </Text>
      (1978), 
      <Text
        maxFontSizeMultiplier={2}
        minimumFontScale={0.7}
        style={
          Object {
            "fontStyle": "italic",
          }
        }
      >
        Bright Eyes 
      </Text>
    </Text>
  </Text>
  <Text
    allowFontScaling={false}
    maxFontSizeMultiplier={2}
    minimumFontScale={0.7}
    style={
      Object {
        "color": "#696969",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 12,
        "marginTop": 10,
      }
    }
  >
    <Text
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
    >
      Libby Purves
    </Text>
  </Text>
</View>
`;

exports[`tile s with logo for medium breakpoint 1`] = `
<View
  style={
    Object {
      "padding": 15,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginBottom": 5,
      }
    }
  >
    LOGO
    <Text
      allowFontScaling={false}
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
      style={
        Object {
          "color": "#1D1D1B",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 20,
          "lineHeight": 20,
          "marginBottom": 0,
        }
      }
    >
      Nature notes
    </Text>
  </View>
  <Text
    allowFontScaling={false}
    maxFontSizeMultiplier={2}
    minimumFontScale={0.7}
    style={
      Object {
        "color": "#696969",
        "fontFamily": "TimesDigitalW04-Regular",
        "fontSize": 14,
        "lineHeight": 20,
      }
    }
  >
    <Text
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
    >
      <Text
        maxFontSizeMultiplier={2}
        minimumFontScale={0.7}
        style={
          Object {
            "color": "#1D1D1B",
            "fontWeight": "bold",
          }
        }
      >
        Rick Astley
      </Text>
      , singer-songwriter, 
      <Text
        maxFontSizeMultiplier={2}
        minimumFontScale={0.7}
        style={
          Object {
            "fontStyle": "italic",
          }
        }
      >
        Never Gonna Give You Up 
      </Text>
      (1987), 53; 
      <Text
        maxFontSizeMultiplier={2}
        minimumFontScale={0.7}
        style={
          Object {
            "color": "#1D1D1B",
            "fontWeight": "bold",
          }
        }
      >
        Mike Batt
      </Text>
      , composer, songwriter, 
      <Text
        maxFontSizeMultiplier={2}
        minimumFontScale={0.7}
        style={
          Object {
            "fontStyle": "italic",
          }
        }
      >
        Wombling Free 
      </Text>
      (1978), 
      <Text
        maxFontSizeMultiplier={2}
        minimumFontScale={0.7}
        style={
          Object {
            "fontStyle": "italic",
          }
        }
      >
        Bright Eyes 
      </Text>
    </Text>
  </Text>
  <Text
    allowFontScaling={false}
    maxFontSizeMultiplier={2}
    minimumFontScale={0.7}
    style={
      Object {
        "color": "#696969",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 12,
        "marginTop": 10,
      }
    }
  >
    <Text
      maxFontSizeMultiplier={2}
      minimumFontScale={0.7}
    >
      Libby Purves
    </Text>
  </Text>
</View>
`;
